Assignment3/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: default
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: web
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: agent
  type: ClusterIP
